--- a/less/home-page.less
+++ b/less/home-page.less
@@ -40,10 +40,6 @@ header {
 
         section {
             width: 32%;
-            
-            div {
-                max-height: 200px;
-            }
         }
 
         img {
